convert comment to ddd
