# internal/interfaces/api/rest/comment/comment_user/comment_like_controller.go
@@ -1,5 +1,18 @@
 package comment_user
 
+import (
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/poin4003/yourVibes_GoApi/internal/application/comment/command"
+	"github.com/poin4003/yourVibes_GoApi/internal/application/comment/services"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/extensions"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/comment/comment_user/dto/response"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/comment/comment_user/query"
+	pkg_response "github.com/poin4003/yourVibes_GoApi/pkg/response"
+	"net/http"
+)
+
 type cCommentLike struct{}
 
 func NewCommentLikeController() *cCommentLike {
@@ -15,30 +28,35 @@ func NewCommentLikeController() *cCommentLike {
 // @Param comment_id path string true "comment ID to create like comment"
 // @Security ApiKeyAuth
 // @Router /comments/like_comment/{comment_id} [post]
-//func (p *cCommentLike) LikeComment(ctx *gin.Context) {
-//	commentIdStr := ctx.Param("comment_id")
-//	commentId, err := uuid.Parse(commentIdStr)
-//	if err != nil {
-//		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
-//		return
-//	}
-//
-//	userUUID, err := extensions.GetUserID(ctx)
-//	if err != nil {
-//		pkg_response.ErrorResponse(ctx, pkg_response.ErrInvalidToken, http.StatusUnauthorized, err.Error())
-//		return
-//	}
-//
-//	likeUserCommentModel := mapper.MapToLikeUserCommentFromCommentIdAndUserId(commentId, userUUID)
-//
-//	commentDto, resultCode, httpStatusCode, err := services.CommentLike().LikeComment(ctx, likeUserCommentModel, userUUID)
-//	if err != nil {
-//		pkg_response.ErrorResponse(ctx, resultCode, httpStatusCode, err.Error())
-//		return
-//	}
-//
-//	pkg_response.SuccessResponse(ctx, pkg_response.ErrCodeSuccess, http.StatusOK, commentDto)
-//}
+func (p *cCommentLike) LikeComment(ctx *gin.Context) {
+	// 1. Get comment id form param
+	commentIdStr := ctx.Param("comment_id")
+	commentId, err := uuid.Parse(commentIdStr)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 2. Get user id from token
+	userIdClaim, err := extensions.GetUserID(ctx)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrInvalidToken, http.StatusUnauthorized, err.Error())
+		return
+	}
+
+	// 3. Call service to handle like or dislike
+	likeCommentCommand := &command.LikeCommentCommand{CommentId: commentId, UserId: userIdClaim}
+	result, err := services.CommentLike().LikeComment(ctx, likeCommentCommand)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, result.ResultCode, result.HttpStatusCode, err.Error())
+		return
+	}
+
+	// 4. Map to dto
+	commentDto := response.ToCommentWithLikedDto(result.Comment)
+
+	pkg_response.SuccessResponse(ctx, pkg_response.ErrCodeSuccess, http.StatusOK, commentDto)
+}
 
 // GetUserLikeComment documentation
 // @Summary Get User like comments
@@ -51,31 +69,39 @@ func NewCommentLikeController() *cCommentLike {
 // @Param page query int false "Page number for pagination"
 // @Security ApiKeyAuth
 // @Router /comments/like_comment/{comment_id} [get]
-//func (p *cCommentLike) GetUserLikeComment(ctx *gin.Context) {
-//	commentIdStr := ctx.Param("comment_id")
-//	commentId, err := uuid.Parse(commentIdStr)
-//	if err != nil {
-//		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, fmt.Sprintf("invalid comment id: %s", commentIdStr))
-//		return
-//	}
-//
-//	var query query.CommentLikeQueryObject
-//	if err := ctx.ShouldBindQuery(&query); err != nil {
-//		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, fmt.Sprintf("invalid query"))
-//		return
-//	}
-//
-//	likeUserComment, resultCode, httpStatusCode, paging, err := services.CommentLike().GetUsersOnLikeComment(ctx, commentId, &query)
-//	if err != nil {
-//		pkg_response.ErrorResponse(ctx, resultCode, httpStatusCode, err.Error())
-//		return
-//	}
-//
-//	var userDtos []response.UserDtoShortVer
-//	for _, user := range likeUserComment {
-//		userDto := user_mapper.MapUserToUserDtoShortVer(user)
-//		userDtos = append(userDtos, userDto)
-//	}
-//
-//	pkg_response.SuccessPagingResponse(ctx, pkg_response.ErrCodeSuccess, http.StatusOK, userDtos, *paging)
-//}
+func (p *cCommentLike) GetUserLikeComment(ctx *gin.Context) {
+	// 1. Get comment id from param
+	commentIdStr := ctx.Param("comment_id")
+	commentId, err := uuid.Parse(commentIdStr)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, fmt.Sprintf("invalid comment id: %s", commentIdStr))
+		return
+	}
+
+	// 2. Get query
+	var query query.CommentLikeQueryObject
+	if err := ctx.ShouldBindQuery(&query); err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, fmt.Sprintf("invalid query"))
+		return
+	}
+
+	// 3. Call service to handle get user like comment
+	getUserLikeCommentQuery, err := query.ToGetCommentLikeQuery(commentId)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrServerFailed, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	result, err := services.CommentLike().GetUsersOnLikeComment(ctx, getUserLikeCommentQuery)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, result.ResultCode, result.HttpStatusCode, err.Error())
+		return
+	}
+
+	var userDtos []*response.UserDto
+	for _, userResult := range result.Users {
+		userDtos = append(userDtos, response.ToUserDto(userResult))
+	}
+
+	pkg_response.SuccessPagingResponse(ctx, pkg_response.ErrCodeSuccess, http.StatusOK, userDtos, *result.PagingResponse)
+}
