# internal/interfaces/api/rest/comment/comment_user/comment_user_controller.go
@@ -1,5 +1,19 @@
 package comment_user
 
+import (
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/poin4003/yourVibes_GoApi/internal/application/comment/command"
+	"github.com/poin4003/yourVibes_GoApi/internal/application/comment/services"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/extensions"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/comment/comment_user/dto/request"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/comment/comment_user/dto/response"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/comment/comment_user/query"
+	pkg_response "github.com/poin4003/yourVibes_GoApi/pkg/response"
+	"net/http"
+)
+
 type cCommentUser struct {
 }
 
@@ -14,35 +28,42 @@ func NewCommentUserController() *cCommentUser {
 // @Accept json
 // @Produce json
 // @Param input body request.CreateCommentInput true "input"
-// @Success 200 {object} response.ResponseData
-// @Failure 500 {object} response.ErrResponse
 // @Security ApiKeyAuth
 // @Router /comments/ [post]
-//func (p *cCommentUser) CreateComment(ctx *gin.Context) {
-//	var commentInput request.CreateCommentInput
-//
-//	if err := ctx.ShouldBindJSON(&commentInput); err != nil {
-//		response.ErrorResponse(ctx, response.ErrCodeValidate, http.StatusBadRequest, err.Error())
-//		return
-//	}
-//
-//	userUUID, err := extensions.GetUserID(ctx)
-//	if err != nil {
-//		response.ErrorResponse(ctx, response.ErrInvalidToken, http.StatusUnauthorized, err.Error())
-//		return
-//	}
-//
-//	commentModel := mapper.MapToCommentFromCreateDto(&commentInput, userUUID)
-//	comment, resultCode, httpStatusCode, err := services.CommentUser().CreateComment(ctx, commentModel)
-//	if err != nil {
-//		response.ErrorResponse(ctx, resultCode, httpStatusCode, err.Error())
-//		return
-//	}
-//
-//	commentDto := mapper.MapCommentToNewCommentDto(comment)
-//
-//	response.SuccessResponse(ctx, resultCode, http.StatusOK, commentDto)
-//}
+func (p *cCommentUser) CreateComment(ctx *gin.Context) {
+	var commentInput request.CreateCommentInput
+
+	// 1. Get body
+	if err := ctx.ShouldBindJSON(&commentInput); err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 2. Get userid from token
+	userIdClaims, err := extensions.GetUserID(ctx)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrInvalidToken, http.StatusUnauthorized, err.Error())
+		return
+	}
+
+	// 3. Call service to handle create comment
+	createCommentCommand, err := commentInput.ToCreateCommentCommand(userIdClaims)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrServerFailed, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	result, err := services.CommentUser().CreateComment(ctx, createCommentCommand)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, result.ResultCode, result.HttpStatusCode, err.Error())
+		return
+	}
+
+	// 4. Map to dto
+	commentDto := response.ToCommentDto(result.Comment)
+
+	pkg_response.SuccessResponse(ctx, result.ResultCode, http.StatusOK, commentDto)
+}
 
 // GetManyComment documentation
 // @Summary Get many comment
@@ -54,33 +75,45 @@ func NewCommentUserController() *cCommentUser {
 // @Param parent_id query string false "Filter by parent id, get the next layer"
 // @Param limit query int false "Limit of posts per page"
 // @Param page query int false "Page number for pagination"
-// @Success 200 {object} response.ResponseData
-// @Failure 500 {object} response.ErrResponse "Internal server error"
 // @Security ApiKeyAuth
 // @Router /comments/ [get]
-//func (p *cCommentUser) GetComment(ctx *gin.Context) {
-//	var query query.CommentQueryObject
-//
-//	if err := ctx.ShouldBindQuery(&query); err != nil {
-//		response.ErrorResponse(ctx, response.ErrCodeValidate, http.StatusBadRequest, err.Error())
-//		return
-//	}
-//
-//	userUUID, err := extensions.GetUserID(ctx)
-//	if err != nil {
-//		response.ErrorResponse(ctx, response.ErrInvalidToken, http.StatusUnauthorized, err.Error())
-//		return
-//	}
-//
-//	commentDtos, resultCode, httpStatusCode, paging, err := services.CommentUser().GetManyComments(ctx, &query, userUUID)
-//	if err != nil {
-//		response.ErrorResponse(ctx, resultCode, httpStatusCode, err.Error())
-//		return
-//	}
-//
-//	response.SuccessPagingResponse(ctx, resultCode, http.StatusOK, commentDtos, *paging)
-//}
-//
+func (p *cCommentUser) GetComment(ctx *gin.Context) {
+	// 1. Get query
+	var query query.CommentQueryObject
+	if err := ctx.ShouldBindQuery(&query); err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 2. Get user id from token
+	userIdClaims, err := extensions.GetUserID(ctx)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrInvalidToken, http.StatusUnauthorized, err.Error())
+		return
+	}
+
+	// 3. Call service to handle get many
+	getManyCommentQuery, err := query.ToGetManyCommentQuery(userIdClaims)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrServerFailed, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	result, err := services.CommentUser().GetManyComments(ctx, getManyCommentQuery)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, result.ResultCode, result.HttpStatusCode, err.Error())
+		return
+	}
+
+	// 4. Map to dto
+	var commentDtos []*response.CommentWithLikedDto
+	for _, commentResult := range result.Comments {
+		commentDtos = append(commentDtos, response.ToCommentWithLikedDto(commentResult))
+	}
+
+	pkg_response.SuccessPagingResponse(ctx, result.ResultCode, http.StatusOK, commentDtos, *result.PagingResponse)
+}
+
 // DeleteComment documentation
 // @Summary delete comment by ID
 // @Description when user want to delete comment
@@ -88,63 +121,70 @@ func NewCommentUserController() *cCommentUser {
 // @Accept json
 // @Produce json
 // @Param comment_id path string true "comment ID"
-// @Success 200 {object} response.ResponseData
-// @Failure 500 {object} response.ErrResponse
 // @Security ApiKeyAuth
 // @Router /comments/{comment_id} [delete]
-//func (p *cCommentUser) DeleteComment(ctx *gin.Context) {
-//	commentIdStr := ctx.Param("comment_id")
-//	commentId, err := uuid.Parse(commentIdStr)
-//	if err != nil {
-//		response.ErrorResponse(ctx, response.ErrCodeValidate, http.StatusBadRequest, err.Error())
-//		return
-//	}
-//
-//	resultCode, httpStatusCode, err := services.CommentUser().DeleteComment(ctx, commentId)
-//	if err != nil {
-//		response.ErrorResponse(ctx, resultCode, httpStatusCode, err.Error())
-//		return
-//	}
-//
-//	response.SuccessResponse(ctx, resultCode, http.StatusOK, nil)
-//}
+func (p *cCommentUser) DeleteComment(ctx *gin.Context) {
+	// 1. Get comment id form param
+	commentIdStr := ctx.Param("comment_id")
+	commentId, err := uuid.Parse(commentIdStr)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 2. Call service to handle delete comment
+	deleteCommentCommand := &command.DeleteCommentCommand{CommentId: commentId}
+	result, err := services.CommentUser().DeleteComment(ctx, deleteCommentCommand)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, result.ResultCode, result.HttpStatusCode, err.Error())
+		return
+	}
+
+	pkg_response.SuccessResponse(ctx, result.ResultCode, http.StatusOK, nil)
+}
 
 // UpdateComment documentation
 // @Summary update comment
 // @Description When user need to update information of comment
 // @Tags comment_user
-// @Accept multipart/form-data
+// @Accept json
 // @Produce json
 // @Param comment_id path string true "commentId"
 // @Param input body request.UpdateCommentInput true "input"
-// @Success 200 {object} response.ResponseData
-// @Failure 500 {object} response.ErrResponse
 // @Security ApiKeyAuth
 // @Router /comments/{comment_id} [patch]
-//func (p *cCommentUser) UpdateComment(ctx *gin.Context) {
-//	var updateInput request.UpdateCommentInput
-//
-//	if err := ctx.ShouldBindJSON(&updateInput); err != nil {
-//		response.ErrorResponse(ctx, response.ErrCodeValidate, http.StatusBadRequest, err.Error())
-//		return
-//	}
-//
-//	commentIdStr := ctx.Param("comment_id")
-//	commentId, err := uuid.Parse(commentIdStr)
-//	if err != nil {
-//		response.ErrorResponse(ctx, response.ErrCodeValidate, http.StatusBadRequest, err.Error())
-//		return
-//	}
-//
-//	commentModel := mapper.MapToCommentFromUpdateDto(&updateInput)
-//
-//	comment, resultCode, httpStatusCode, err := services.CommentUser().UpdateComment(ctx, commentId, commentModel)
-//	if err != nil {
-//		response.ErrorResponse(ctx, resultCode, httpStatusCode, err.Error())
-//		return
-//	}
-//
-//	commentDto := mapper.MapCommentToUpdatedCommentDto(comment)
-//
-//	response.SuccessResponse(ctx, resultCode, http.StatusOK, commentDto)
-//}
+func (p *cCommentUser) UpdateComment(ctx *gin.Context) {
+	// 1. Get body
+	var updateInput request.UpdateCommentInput
+	if err := ctx.ShouldBindJSON(&updateInput); err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 2. Get commend id from param
+	commentIdStr := ctx.Param("comment_id")
+	commentId, err := uuid.Parse(commentIdStr)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrCodeValidate, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	// 3. Call service to handle update comment
+	updateCommentCommand, err := updateInput.ToUpdateCommentCommand(commentId)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, pkg_response.ErrServerFailed, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	result, err := services.CommentUser().UpdateComment(ctx, updateCommentCommand)
+	if err != nil {
+		pkg_response.ErrorResponse(ctx, result.ResultCode, result.HttpStatusCode, err.Error())
+		return
+	}
+
+	// 4. Map to dto
+	commentDto := response.ToCommentDto(result.Comment)
+
+	fmt.Println("cc")
+	pkg_response.SuccessResponse(ctx, result.ResultCode, http.StatusOK, commentDto)
+}
