# internal/interfaces/api/rest/comment/comment_user/dto/mapper/like_user_comment_mapper.go
@@ -1,16 +1,0 @@
-package mapper
-
-import (
-	"github.com/google/uuid"
-	"github.com/poin4003/yourVibes_GoApi/internal/infrastructure/models"
-)
-
-func MapToLikeUserCommentFromCommentIdAndUserId(
-	commentId uuid.UUID,
-	userId uuid.UUID,
-) *models.LikeUserComment {
-	return &models.LikeUserComment{
-		CommentId: commentId,
-		UserId:    userId,
-	}
-}
