# internal/interfaces/api/rest/comment/comment_user/dto/request/update_comment_request.go
@@ -1,5 +1,19 @@
 package request
 
+import (
+	"github.com/google/uuid"
+	"github.com/poin4003/yourVibes_GoApi/internal/application/comment/command"
+)
+
 type UpdateCommentInput struct {
 	Content *string `json:"content,omitempty"`
+}
+
+func (req *UpdateCommentInput) ToUpdateCommentCommand(
+	commentId uuid.UUID,
+) (*command.UpdateCommentCommand, error) {
+	return &command.UpdateCommentCommand{
+		CommentId: commentId,
+		Content:   req.Content,
+	}, nil
 }
