# internal/interfaces/api/rest/comment/comment_user/dto/response/comment_dto.go
@@ -2,45 +2,70 @@ package response
 
 import (
 	"github.com/google/uuid"
-	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/user/user_user/dto/response"
+	"github.com/poin4003/yourVibes_GoApi/internal/application/comment/common"
 	"time"
 )
 
 type CommentDto struct {
-	ID              uuid.UUID                `json:"id"`
-	PostId          uuid.UUID                `json:"post_id"`
-	UserId          uuid.UUID                `json:"user_id"`
-	ParentId        *uuid.UUID               `json:"parent_id"`
-	Content         string                   `json:"content"`
-	LikeCount       int                      `json:"like_count"`
-	RepCommentCount int                      `json:"rep_comment_count"`
-	IsLiked         bool                     `json:"is_liked"`
-	CreatedAt       time.Time                `json:"created_at"`
-	UpdatedAt       time.Time                `json:"updated_at"`
-	User            response.UserDtoShortVer `json:"user"`
-}
-
-type NewCommentDto struct {
 	ID              uuid.UUID  `json:"id"`
 	PostId          uuid.UUID  `json:"post_id"`
 	UserId          uuid.UUID  `json:"user_id"`
+	User            *UserDto   `json:"user"`
 	ParentId        *uuid.UUID `json:"parent_id"`
 	Content         string     `json:"content"`
 	LikeCount       int        `json:"like_count"`
 	RepCommentCount int        `json:"rep_comment_count"`
 	CreatedAt       time.Time  `json:"created_at"`
 	UpdatedAt       time.Time  `json:"updated_at"`
+	Status          bool       `json:"status"`
 }
 
-type UpdatedCommentDto struct {
-	ID              uuid.UUID                `json:"id"`
-	PostId          uuid.UUID                `json:"post_id"`
-	UserId          uuid.UUID                `json:"user_id"`
-	ParentId        *uuid.UUID               `json:"parent_id"`
-	Content         string                   `json:"content"`
-	LikeCount       int                      `json:"like_count"`
-	RepCommentCount int                      `json:"rep_comment_count"`
-	CreatedAt       time.Time                `json:"created_at"`
-	UpdatedAt       time.Time                `json:"updated_at"`
-	User            response.UserDtoShortVer `json:"user"`
+type CommentWithLikedDto struct {
+	ID              uuid.UUID  `json:"id"`
+	PostId          uuid.UUID  `json:"post_id"`
+	UserId          uuid.UUID  `json:"user_id"`
+	User            *UserDto   `json:"user"`
+	ParentId        *uuid.UUID `json:"parent_id"`
+	Content         string     `json:"content"`
+	LikeCount       int        `json:"like_count"`
+	RepCommentCount int        `json:"rep_comment_count"`
+	CreatedAt       time.Time  `json:"created_at"`
+	UpdatedAt       time.Time  `json:"updated_at"`
+	Status          bool       `json:"status"`
+	IsLiked         bool       `json:"is_liked"`
+}
+
+func ToCommentDto(commentResult *common.CommentResult) *CommentDto {
+	return &CommentDto{
+		ID:              commentResult.ID,
+		PostId:          commentResult.PostId,
+		UserId:          commentResult.UserId,
+		User:            ToUserDto(commentResult.User),
+		ParentId:        commentResult.ParentId,
+		Content:         commentResult.Content,
+		LikeCount:       commentResult.LikeCount,
+		RepCommentCount: commentResult.RepCommentCount,
+		CreatedAt:       commentResult.CreatedAt,
+		UpdatedAt:       commentResult.UpdatedAt,
+		Status:          commentResult.Status,
+	}
+}
+
+func ToCommentWithLikedDto(
+	commentResult *common.CommentResultWithLiked,
+) *CommentWithLikedDto {
+	return &CommentWithLikedDto{
+		ID:              commentResult.ID,
+		PostId:          commentResult.PostId,
+		UserId:          commentResult.UserId,
+		User:            ToUserDto(commentResult.User),
+		ParentId:        commentResult.ParentId,
+		Content:         commentResult.Content,
+		LikeCount:       commentResult.LikeCount,
+		RepCommentCount: commentResult.RepCommentCount,
+		CreatedAt:       commentResult.CreatedAt,
+		UpdatedAt:       commentResult.UpdatedAt,
+		Status:          commentResult.Status,
+		IsLiked:         commentResult.IsLiked,
+	}
 }
