# internal/interfaces/api/routers/user/comment.router.go
@@ -3,6 +3,7 @@ package user
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/middlewares"
+	"github.com/poin4003/yourVibes_GoApi/internal/interfaces/api/rest/comment/comment_user"
 )
 
 type CommentRouter struct{}
@@ -10,8 +11,8 @@ type CommentRouter struct{}
 func (cr *CommentRouter) InitCommentRouter(Router *gin.RouterGroup) {
 	// Public router
 
-	//commentUserController := comment_user.NewCommentUserController()
-	//commentLikeController := comment_user.NewCommentLikeController()
+	commentUserController := comment_user.NewCommentUserController()
+	commentLikeController := comment_user.NewCommentLikeController()
 	//userRouterPublic := Router.Group("/posts")
 	//{
 	//}
@@ -21,13 +22,13 @@ func (cr *CommentRouter) InitCommentRouter(Router *gin.RouterGroup) {
 	commentRouterPrivate.Use(middlewares.AuthProteced())
 	{
 		// Comment user
-		//commentRouterPrivate.POST("/", commentUserController.CreateComment)
-		//commentRouterPrivate.GET("/", commentUserController.GetComment)
-		//commentRouterPrivate.DELETE("/:comment_id", commentUserController.DeleteComment)
-		//commentRouterPrivate.PATCH("/:comment_id", commentUserController.UpdateComment)
-		//
-		//// Comment like
-		//commentRouterPrivate.POST("/like_comment/:comment_id", commentLikeController.LikeComment)
-		//commentRouterPrivate.GET("/like_comment/:comment_id", commentLikeController.GetUserLikeComment)
+		commentRouterPrivate.POST("/", commentUserController.CreateComment)
+		commentRouterPrivate.GET("/", commentUserController.GetComment)
+		commentRouterPrivate.DELETE("/:comment_id", commentUserController.DeleteComment)
+		commentRouterPrivate.PATCH("/:comment_id", commentUserController.UpdateComment)
+
+		// Comment like
+		commentRouterPrivate.POST("/like_comment/:comment_id", commentLikeController.LikeComment)
+		commentRouterPrivate.GET("/like_comment/:comment_id", commentLikeController.GetUserLikeComment)
 	}
 }
